ドキュメントタスクのAPI
